2015-10-26 Martin Grønholdt

* user/debug.c (db_alloc): Fixed a some debug output errors.
			   (db_realloc): Fixed a some debug output errors.
* user/handlers/rest/gpio.c (create_eneabled_response): Using JSON generator.
* user/handlers/rest/mem.c (create_get_response): Using JSON generator.
* user/handlers/rest/net-names.c (scan_done_cb): Using JSON generator.
* user/tools/json-gen.c (json_create_member): Renamed json_create_pair.
						(json_add_to_object): Renamed json_add_to_type and adapted for both arrays and objects.
* user/tools/json-gen.h: Replaced json_add_to_array and json_add_to_object with macros.

2015-10-25 Martin Grønholdt

* user/debug.c: Added db_realloc.
		  (db_alloc): Added error checking.
*  user/user_config.h: Added db_realloc macro.
* user/handlers/rest/gpio.c: Added REST_GPIO_PINS.
							 Removed json_create_int_array.
* user/handlers/rest/mem.c (create_get_response): Using JSON generator.
* user/handlers/rest/net-names.c: Removed json_create_string_array.
* user/handlers/rest/network.c (create_get_response): Using JSON generator.
* user/handlers/rest/version.c (create_get_response): Using JSON generator.
* user/tools/json-gen.c: Added file with JSON generation routines.
* user/tools/json-gen.h Added file with JSON generation routines.

2015-10-21 Martin Grønholdt

* Makefile: Changed size report printing.
			Don't minify web sources in debug build.
* ld/eagle.app.v6.ld: Added more specific sections to IROM.
* mk/config.mk: Removed SDK JSON library.
			  : Added jsmn for JSON parsing (http://zserge.com/jsmn.html).
* tools/mem_usage.sh: Added ROM size output.
* user/driver/uart.c: Updated source from SDK.
* user/driver/uart.h: Updated source from SDK.
* user/fs/dbffs.c (dbffs_find_file_header): Added some error checking.
* user/handlers/fs/http-fs.c (do_message): Added function, that handles
										   sending both normal and error
										   request.
							 (http_fs_handler): Use do_message.